apps/redir/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redir
  labels:
    app: redir
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: redir
