apps/redir/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redir
spec:
  rules:
  - host: redir.rpilab.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redir
            port:
              number: 80
  - host: aro.fyi
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redir
            port:
              number: 80
